corrected overflow issue, made readme

--- a/style.css
+++ b/style.css
@@ -11,29 +11,62 @@ body {
 
 .card {
     font-family: 'DM Sans';
-    max-width: 800px;
+    max-width: 600px;
 }
 
 @media screen and (max-width: 768px) {
     .card {
-        max-width: 480px;
-        margin: 1rem;
+        max-width: 470px;
+        margin: 20px;
     }
 }
 
 @media screen and (max-width:485px) {
     .card {
         max-width: 370px;
-        margin: 1rem;
+        margin: 20px;
     }
+}
+
+hr {
+    background-color: hsl(23, 35%, 93%);
+    border: none;
+    height: 2px;
+}
+
+.text-big {
+    font-size: 40px;
+    font-weight: 700;
+    color: hsl(25, 47%, 15%);
+    margin: 0.5rem;
+}
+
+.text-medium {
+    font-size: 26px;
+    font-weight: 700;
+    margin: 0.5rem;
+}
+
+.text-small {
+    font-size: 18px;
+    font-weight: 400;
+    margin: 0.5rem;
 }
 
 .upper-section {
     background-color: hsl(10, 79%, 65%);
-    padding: 1rem;
     border-radius: 20px;
-    margin-bottom: 1rem;
     color: white;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+.two-part-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding-right: 1rem;
+    padding-left: 1rem;
 }
 
 .lower-section {
@@ -44,8 +77,9 @@ body {
 }
 
 .lower-section h1 {
+    padding-left: 1rem;
+    font-size: 28px;
     color: hsl(25, 47%, 15%);
-    font-size: 1.5rem;
 }
 
 .container-bar-chart {
@@ -68,19 +102,23 @@ body {
     background-color: hsl(10, 79%, 65%);
     margin-bottom: 0.5rem;
     border-radius: 5px;
-    padding: 0.5rem;
-    width: 2.1rem;
     position: relative;
+    width: 3rem;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
+    .bar-container {
+        margin: 0.1rem;
+    }
+
     .bar {
-        width: 2.7rem;
+        width: 2.5rem;
     }
 }
 
 .bar:hover {
     cursor: pointer;
+    background-color: hsl(10, 64%, 71%);
 }
 
 .bar:hover::after {
@@ -97,27 +135,61 @@ body {
     padding: 5px;
 }
 
-
 .active-bar {
     background-color: hsl(186, 34%, 60%);
 }
 
 .active-bar:hover {
     cursor: pointer;
+    background-color: hsl(185, 31%, 70%);
 }
 
-figcaption {
-    margin-top: 0.5rem;
-}
-
-.container-under-bar {
+.right-section {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
+    flex-direction: column;
+    justify-content: right;
+    align-items: end;
+    margin-left: 30px;
+}
+
+.left-section {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: start;
+}
+
+.left-section .text-small,
+.text-big {
+    margin-top: 0;
+    margin-bottom: 0;
+    text-align: left;
+}
+
+.right-section .text-bold {
+    text-align: right;
+    font-weight: 700;
+    color: hsl(25, 47%, 15%);
+    margin-bottom: 0;
+}
+
+.right-section p {
+    text-align: right;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .attribution {
     font-family: 'DM Sans';
     color: hsl(28, 10%, 53%);
-    margin-top: 10%;
+    margin-top: 1rem;
+}
+
+.attribution a {
+    text-decoration: 0;
+    color: hsl(28, 22%, 33%);
 }
